Add new user configuration link

--- a/distribution.org
+++ b/distribution.org
@@ -37,6 +37,8 @@ References:
 - http://pages.sachachua.com/.emacs.d/Sacha.html
 - https://github.com/jwiegley/dot-emacs
 - https://github.com/purcell/emacs.d
+*** User Configurations
+- https://sriramkswamy.github.io/dotemacs/
 *** Blog Posts
     - https://diego.codes/post/emacs-2018/
 ** Package Management
