--- a/distribution.org
+++ b/distribution.org
@@ -264,9 +264,29 @@ References:
    [2018-12-30 Sun 14:47]
    References:
    - https://github.com/abo-abo/swiper
+   - http://oremacs.com/swiper/#key-bindings
    #+BEGIN_SRC emacs-lisp
      (use-package ivy
-       :config (ivy-mode 1))
+       :bind
+       (("C-c C-r" . ivy-resume))
+       :config
+       (ivy-mode 1)
+       (setq ivy-use-virtual-buffers t
+             ivy-count-format "(%d/%d) "))
+
+     (use-package counsel
+       :bind
+       (("M-x" . counsel-M-x)
+        ("C-x b" . counsel-switch-buffer)
+        ("C-h f" . counsel-describe-function)
+        ("C-h v" . counsel-describe-variable)
+        ("C-h l" . counsel-find-library)
+        ("C-h i" . counsel-info-lookup-symbol)
+        ("C-h u" . counsel-unicode-char)))
+
+     (use-package swiper
+       :bind
+       (("C-s" . swiper)))
    #+END_SRC
 ** TODO Hydra
    [2018-12-30 Sun 13:28]
