--- a/distribution.org
+++ b/distribution.org
@@ -421,48 +421,17 @@ References:
        :hook (prog-mode . git-gutter+-mode))
    #+END_SRC
 ** TODO Org-Mode
+[2019-04-25 Thu 16:44]
 References:
 - https://orgmode.org/
 - https://github.com/emacsmirror/org
 - https://github.com/raxod502/straight.el/issues/211#issuecomment-355379837
 - https://github.com/raxod502/straight.el/tree/6c47044bfbc419527de4d345ceaf01dea3a3b03d#installing-org-with-straightel
-   #+BEGIN_SRC emacs-lisp
-     (require 'subr-x)
-     (straight-use-package 'git)
-
-     (defun org-git-version ()
-       "The Git version of org-mode.
-       Inserted by installing org-mode or when a release is made."
-       (require 'git)
-       (let ((git-repo (expand-file-name
-                        "straight/repos/org/" user-emacs-directory)))
-         (string-trim
-          (git-run "describe"
-                   "--match=release\*"
-                   "--abbrev=6"
-                   "HEAD"))))
-
-     (defun org-release ()
-       "The release version of org-mode.
-       Inserted by installing org-mode or when a release is made."
-       (require 'git)
-       (let ((git-repo (expand-file-name
-                        "straight/repos/org/" user-emacs-directory)))
-         (string-trim
-          (string-remove-prefix
-           "release_"
-           (git-run "describe"
-                    "--match=release\*"
-                    "--abbrev=0"
-                    "HEAD")))))
-
-     (provide 'org-version)
-
-     (use-package org
-       :defer t
-       :commands (org-babel-tangle-file org-mode)
-       :mode (("\\.org$" . org-mode)))
-   #+END_SRC
+- https://github.com/raxod502/straight.el#integration-with-org
+- https://github.com/raxod502/straight.el/issues/211
+  #+BEGIN_SRC emacs-lisp
+    (use-package org :defer t)
+  #+END_SRC
 *** TODO Evil-Org
     [2019-01-02 Wed 10:10]
     References:
